[tool.poetry]
name = "air-reservation-system"
version = "0.1.0"
description = "air_reservation_sytem"
authors = ["Piotr Lipinski"]
license = "Beerware"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
